RESOLVED FIXED 244326
ListAttributeTargetObserver should use WeakPtr<Element> instead of Element*
https://bugs.webkit.org/show_bug.cgi?id=244326
Summary ListAttributeTargetObserver should use WeakPtr<Element> instead of Element*
Ryosuke Niwa
Reported 2022-08-25 00:29:35 PDT
Don't use a raw pointer.
Attachments
Ryosuke Niwa
Comment 1 2022-08-25 00:32:27 PDT
EWS
Comment 2 2022-08-25 09:06:44 PDT
Committed 253773@main (98c1e4dd22d3): <https://commits.webkit.org/253773@main> Reviewed commits have been landed. Closing PR #3646 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-25 09:08:00 PDT
Note You need to log in before you can comment on or make changes to this bug.