ListAttributeTargetObserver should use WeakPtr<Element> instead of Element* https://bugs.webkit.org/show_bug.cgi?id=244326

Reviewed by Chris Dumez.

* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::resetListAttributeTargetObserver):
(WebCore::ListAttributeTargetObserver::ListAttributeTargetObserver):

Canonical link: https://commits.webkit.org/253773@main